[FIX] hr_attendance: display pin button with correct size
Steps to reproduce:
- Install attendance and website
- Toggle "Employee PIN Identification" in Settings
- Open "Attendances"
- Kiosk Mode
- Identify Manually and click on an employee

Issues:
The button for the pin code are too big, this is due to the CSS change
in website module for the 'btn-lg' class.

https://github.com/odoo/odoo/blob/71227dbc4848c7c27c61e477a78b35e0c0167b8e/addons/website/static/src/scss/website.scss#L576-L594

As a solution I added the styling to the `o_hr_attendance_PINbox_button`
class, such that we keep the original styling.

https://github.com/odoo/odoo/blob/71227dbc4848c7c27c61e477a78b35e0c0167b8e/addons/web/static/lib/bootstrap/dist/css/bootstrap.css#L3462-L3466

opw-3864816

X-original-commit: afbbdbd2ebc8364e1b9ec7bdb336d5d5619db94f

--- a/addons/hr_attendance/static/src/hr_attendance.scss
+++ b/addons/hr_attendance/static/src/hr_attendance.scss
@@ -32,6 +32,9 @@
 
     .o_hr_attendance_PINbox_button {
         aspect-ratio: 1.8;
+        padding: 0.5rem 1rem;
+        font-size: 1.25rem;
+        border-radius: 0.3rem;
     }
 }
 
